:bug: Avoid overflow

--- a/gsa-frontend/src/styles.scss
+++ b/gsa-frontend/src/styles.scss
@@ -3,7 +3,7 @@
 
 html, body {
   height: 100%;
-  //overflow: hidden !important;
+  overflow: hidden !important;
 }
 
 body {
